// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insertAfterImports addon-notes 1`] = `
"import React from 'react';

import BaseButton from '../components/BaseButton';
import markdownNotes from './notes/notes.md';
INSERT

import React from 'react';

import BaseButton from '../components/BaseButton';
import markdownNotes from './notes/notes.md';

const markdownString = '...';"
`;

exports[`insertAfterImports imports 1`] = `
"import './foo';
import './bar';
INSERT

import './foo';
import './bar';
whatever;"
`;

exports[`insertAfterImports multi-line imports 1`] = `
"import 'foo';
import {
  bar
} from 'baz';
INSERT

import 'foo';
import {
  bar
} from 'baz';
whatever;"
`;

exports[`insertAfterImports no imports 1`] = `
"
INSERT

foo bar;
baz;"
`;

exports[`insertAfterImports single-line imports 1`] = `
"import 'foo';
import { bar } from 'baz';
INSERT

import 'foo';
import { bar } from 'baz';
whatever;"
`;
